[gd_scene load_steps=18 format=2]

[ext_resource path="res://fontlar/youngserif-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resimler/journey_arkaplan.webp" type="Texture" id=2]
[ext_resource path="res://resimler/tanrilar_meclisi_arkaplan.webp" type="Texture" id=3]
[ext_resource path="res://resimler/popup_buton_basili.webp" type="Texture" id=4]
[ext_resource path="res://resimler/popup_buton_normal.webp" type="Texture" id=5]
[ext_resource path="res://resimler/itemFrame_cerceve_gorev.webp" type="Texture" id=6]
[ext_resource path="res://resimler/saat.webp" type="Texture" id=7]
[ext_resource path="res://sceneler/Esyalar.gd" type="Script" id=8]
[ext_resource path="res://sceneler/ScrollContainer.gd" type="Script" id=9]
[ext_resource path="res://resimler/cikis.webp" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0.996078, 0.00784314, 0.00784314, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 150, 39 )
margin_left = 15.0
margin_right = 15.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 150, 39 )
margin_left = 10.0
margin_right = 10.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 424, 765 )

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 1
outline_color = Color( 0.0745098, 0, 0.964706, 1 )
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 2
outline_color = Color( 0.14902, 0.0784314, 0.937255, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Ana" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
text = "Posession"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 94.0
margin_right = -14.0001
margin_bottom = -26.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="TextureRect/ScrollContainer"]
margin_right = 738.0
margin_bottom = 1246.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_bg = Color( 0.54902, 0.756863, 0.0352941, 1 )
custom_colors/font_color_fg = Color( 0, 1, 0.952941, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/tab_fg = SubResource( 2 )
custom_styles/tab_bg = SubResource( 3 )
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="GridContainer" parent="TextureRect/ScrollContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 15
custom_constants/hseparation = 5
columns = 4

[node name="EsyaKonteyner" type="MarginContainer" parent="TextureRect/ScrollContainer/TabContainer/All"]
visible = false
margin_right = 170.0
margin_bottom = 170.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="EsyaCerceve" type="TextureButton" parent="TextureRect/ScrollContainer/TabContainer/All/EsyaKonteyner"]
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Esya" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/All/EsyaKonteyner/EsyaCerceve"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -11.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miktari" type="Label" parent="TextureRect/ScrollContainer/TabContainer/All/EsyaKonteyner/EsyaCerceve"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -22.0
margin_right = -7.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
text = "x "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saat" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/All/EsyaKonteyner/EsyaCerceve"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 10.0
margin_right = -29.0
margin_bottom = 25.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KalanSure" type="Label" parent="TextureRect/ScrollContainer/TabContainer/All/EsyaKonteyner/EsyaCerceve/Saat"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -6.5
margin_right = 39.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Self" type="GridContainer" parent="TextureRect/ScrollContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0
columns = 4

[node name="EsyaKonteyner2" type="MarginContainer" parent="TextureRect/ScrollContainer/TabContainer/Self"]
visible = false
margin_left = 175.0
margin_right = 345.0
margin_bottom = 170.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="EsyaCerceve" type="TextureButton" parent="TextureRect/ScrollContainer/TabContainer/Self/EsyaKonteyner2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Esya" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Self/EsyaKonteyner2/EsyaCerceve"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -11.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miktari" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Self/EsyaKonteyner2/EsyaCerceve"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -22.0
margin_right = -7.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
text = "x "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saat" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Self/EsyaKonteyner2/EsyaCerceve"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 10.0
margin_right = -29.0
margin_bottom = 25.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KalanSure" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Self/EsyaKonteyner2/EsyaCerceve/Saat"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -6.5
margin_right = 39.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" type="GridContainer" parent="TextureRect/ScrollContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0
columns = 4

[node name="EsyaKonteyner2" type="MarginContainer" parent="TextureRect/ScrollContainer/TabContainer/Stars"]
visible = false
margin_left = 175.0
margin_right = 345.0
margin_bottom = 170.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="EsyaCerceve" type="TextureButton" parent="TextureRect/ScrollContainer/TabContainer/Stars/EsyaKonteyner2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Esya" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Stars/EsyaKonteyner2/EsyaCerceve"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -11.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miktari" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Stars/EsyaKonteyner2/EsyaCerceve"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -22.0
margin_right = -7.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
text = "x "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saat" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Stars/EsyaKonteyner2/EsyaCerceve"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 10.0
margin_right = -29.0
margin_bottom = 25.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KalanSure" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Stars/EsyaKonteyner2/EsyaCerceve/Saat"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -6.5
margin_right = 39.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Journey" type="GridContainer" parent="TextureRect/ScrollContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0
columns = 4

[node name="EsyaKonteyner3" type="MarginContainer" parent="TextureRect/ScrollContainer/TabContainer/Journey"]
visible = false
margin_left = 175.0
margin_right = 345.0
margin_bottom = 170.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="EsyaCerceve" type="TextureButton" parent="TextureRect/ScrollContainer/TabContainer/Journey/EsyaKonteyner3"]
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Esya" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Journey/EsyaKonteyner3/EsyaCerceve"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -11.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miktari" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Journey/EsyaKonteyner3/EsyaCerceve"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -22.0
margin_right = -7.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
text = "x "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saat" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Journey/EsyaKonteyner3/EsyaCerceve"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 10.0
margin_right = -29.0
margin_bottom = 25.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KalanSure" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Journey/EsyaKonteyner3/EsyaCerceve/Saat"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -6.5
margin_right = 39.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creatures" type="GridContainer" parent="TextureRect/ScrollContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0
columns = 4

[node name="EsyaKonteyner4" type="MarginContainer" parent="TextureRect/ScrollContainer/TabContainer/Creatures"]
visible = false
margin_left = 175.0
margin_right = 345.0
margin_bottom = 170.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="EsyaCerceve" type="TextureButton" parent="TextureRect/ScrollContainer/TabContainer/Creatures/EsyaKonteyner4"]
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Esya" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Creatures/EsyaKonteyner4/EsyaCerceve"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -11.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miktari" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Creatures/EsyaKonteyner4/EsyaCerceve"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -22.0
margin_right = -7.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
text = "x "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saat" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Creatures/EsyaKonteyner4/EsyaCerceve"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 10.0
margin_right = -29.0
margin_bottom = 25.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KalanSure" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Creatures/EsyaKonteyner4/EsyaCerceve/Saat"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -6.5
margin_right = 39.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Galaxy" type="GridContainer" parent="TextureRect/ScrollContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0
columns = 4

[node name="EsyaKonteyner6" type="MarginContainer" parent="TextureRect/ScrollContainer/TabContainer/Galaxy"]
visible = false
margin_left = 175.0
margin_right = 345.0
margin_bottom = 170.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="EsyaCerceve" type="TextureButton" parent="TextureRect/ScrollContainer/TabContainer/Galaxy/EsyaKonteyner6"]
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Esya" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Galaxy/EsyaKonteyner6/EsyaCerceve"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -11.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miktari" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Galaxy/EsyaKonteyner6/EsyaCerceve"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -22.0
margin_right = -7.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
text = "x "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saat" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Galaxy/EsyaKonteyner6/EsyaCerceve"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 10.0
margin_right = -29.0
margin_bottom = 25.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KalanSure" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Galaxy/EsyaKonteyner6/EsyaCerceve/Saat"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -6.5
margin_right = 39.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Misc" type="GridContainer" parent="TextureRect/ScrollContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0
columns = 4

[node name="EsyaKonteyner5" type="MarginContainer" parent="TextureRect/ScrollContainer/TabContainer/Misc"]
visible = false
margin_left = 175.0
margin_right = 345.0
margin_bottom = 170.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="EsyaCerceve" type="TextureButton" parent="TextureRect/ScrollContainer/TabContainer/Misc/EsyaKonteyner5"]
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Esya" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Misc/EsyaKonteyner5/EsyaCerceve"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -11.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miktari" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Misc/EsyaKonteyner5/EsyaCerceve"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -22.0
margin_right = -7.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
text = "x "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saat" type="TextureRect" parent="TextureRect/ScrollContainer/TabContainer/Misc/EsyaKonteyner5/EsyaCerceve"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 10.0
margin_right = -29.0
margin_bottom = 25.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KalanSure" type="Label" parent="TextureRect/ScrollContainer/TabContainer/Misc/EsyaKonteyner5/EsyaCerceve/Saat"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -6.5
margin_right = 39.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EsyaYokMetin" type="Label" parent="TextureRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -102.5
margin_right = 125.0
margin_bottom = 102.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "You have no possesion in here at this time!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_constants/margin_right = 0
custom_constants/margin_top = 30
custom_constants/margin_left = 11
__meta__ = {
"_editor_description_": ""
}

[node name="CikisButon" type="TextureButton" parent="MarginContainer"]
visible = false
margin_left = 11.0
margin_top = 30.0
margin_right = 80.0
margin_bottom = 80.0
texture_normal = ExtResource( 10 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="tab_selected" from="TextureRect/ScrollContainer/TabContainer" to="." method="_on_TabContainer_tab_selected"]
[connection signal="pressed" from="MarginContainer/CikisButon" to="." method="_on_CikisButon_pressed"]
